--- a/CRUD Test/index.html
+++ b/CRUD Test/index.html
@@ -152,7 +152,7 @@
                     alert('Something went wrong...');
                 }
             }
-            xhttp.open("POST", "http://127.0.0.1:8000/register/", true);
+            xhttp.open("POST", "http://127.0.0.1:8000/signup/", true);
             xhttp.setRequestHeader("Content-type", "application/json");
             data = JSON.stringify({
                 username: username1,
